--- a/package.json
+++ b/package.json
@@ -20,7 +20,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "apollo-angular": "^1.1.1",
+    "apollo-angular-link-http": "^1.1.0",
+    "apollo-cache-inmemory": "^1.2.5",
+    "apollo-client": "^2.3.5",
+    "apollo-link": "^1.2.2",
+    "apollo-link-error": "^1.0.9",
     "core-js": "^2.5.4",
+    "graphql": "^14.0.0",
+    "graphql-tag": "^2.9.2",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
