--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apollo-client": "^2.3.5",
     "apollo-link": "^1.2.2",
     "apollo-link-error": "^1.0.9",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
