--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
