--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
     "hammerjs": "^2.0.8",
+    "ngx-smart-modal": "^7.0.3",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
