--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "apollo-angular": "^1.1.1",
     "apollo-angular-link-http": "^1.1.0",
     "apollo-cache-inmemory": "^1.2.5",
@@ -33,6 +34,7 @@
     "hammerjs": "^2.0.8",
     "ngx-smart-modal": "^7.0.3",
     "rxjs": "^6.0.0",
+    "sweetalert2": "^7.28.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
