--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
+    "angular-font-awesome": "^3.1.2",
     "apollo-angular": "^1.1.1",
     "apollo-angular-link-http": "^1.1.0",
     "apollo-cache-inmemory": "^1.2.5",
@@ -29,6 +30,7 @@
     "apollo-link-error": "^1.0.9",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
     "hammerjs": "^2.0.8",
