--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
+    "angular-bootstrap-md": "^6.2.5",
     "angular-font-awesome": "^3.1.2",
     "apollo-angular": "^1.1.1",
     "apollo-angular-link-http": "^1.1.0",
@@ -29,6 +30,7 @@
     "apollo-link": "^1.2.2",
     "apollo-link-error": "^1.0.9",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "graphql": "^14.0.0",
