--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql-tag": "^2.9.2",
     "hammerjs": "^2.0.8",
     "ngx-smart-modal": "^7.0.3",
+    "ngx-toastr": "^9.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
