--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
     "hammerjs": "^2.0.8",
+    "ngx-mask": "^6.5.18",
     "ngx-smart-modal": "^7.0.3",
     "ngx-toastr": "^9.1.0",
     "rxjs": "^6.0.0",
