--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-client": "^2.3.5",
     "apollo-link": "^1.2.2",
     "apollo-link-error": "^1.0.9",
+    "apollo-link-ws": "^1.0.8",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
@@ -40,6 +41,7 @@
     "ngx-smart-modal": "^7.0.3",
     "ngx-toastr": "^9.1.0",
     "rxjs": "^6.0.0",
+    "subscriptions-transport-ws": "^0.9.14",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
