--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql-tag": "^2.9.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
+    "ngx-barcode": "^0.2.4",
     "ngx-mask": "^6.5.18",
     "ngx-smart-modal": "^7.0.3",
     "ngx-toastr": "^9.1.0",
