--- a/graphcool/package.json
+++ b/graphcool/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "description": "My Graphcool Service",
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-fetch": "^2.2.1"
   }
 }
